--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
         "build": "node scripts/build.js",
         "test": "node scripts/test.js --env=jsdom"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "eslint-config-prettier": "^2.9.0",
+        "eslint-plugin-prettier": "^2.5.0",
+        "prettier": "^1.10.2"
+    },
     "jest": {
         "collectCoverageFrom": [
             "src/**/*.{js,jsx,mjs}"
