--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "devDependencies": {
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-prettier": "^2.5.0",
-        "prettier": "^1.10.2"
+        "prettier": "^1.10.2",
+        "prop-types": "^15.6.0"
     },
     "jest": {
         "collectCoverageFrom": [
